--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "proxy": "https://nimble-tarsier-dfb7fd.netlify.app/",
   "type": "module",
   "scripts": {
     "start": "nodemon index.js"
