--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "proxy": "https://nimble-tarsier-dfb7fd.netlify.app/",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js",
-    "build": "put build command here"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
