--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GOOGLEID='803687131159-u30gh2ml07o380m88qtbrcm20ftrc0a5.apps.googleusercontent.com'
 CLIENTSECRET='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'
+MONGOURL='mongodb+srv://admin-farmmitra:farmmitra.user@cluster1.tctdt.mongodb.net/farmappsss?retryWrites=true&w=majority'
